# SkyrimSE-SmoothCam

./: .buckconfig  .gitignore  .gitmodules  BUCK  CHANGES.md  CMakeLists.txt  README.md  acknowledgements.md  buck_gen.cpp  build_detours.bat  codegen.bzl  common_flags.bzl  make_vs2017.bat  make_vs2017_oldcpu.bat  make_vs2019.bat  make_vs2019_oldcpu.bat  package.bat  package.py  premake5.lua  smoothcam_cxx.bzl  subdir_glob.bzl  vcpkg.json
BuildScripts/: build_detours.bat  build_eastl.bat  download_file.lua  project_common_skse64.lua  project_eastl.lua  project_ms_detours.lua  project_polyhook.lua  project_skse64.lua  project_skse64_common.lua
CodeGen/MCM/: SmoothCam.esp  SmoothCamMCM.pex  mcm.psc  run_preprocess.bat
CodeGen/MCM/mcm/: mcm.psc
CodeGen/MCM/mcm/include/: controls.psc  crosshair.psc  dialogue.psc  following.psc  general.psc  native_functions.psc  offset_groups.psc  presets.psc  thirdperson.psc  util_functions.psc
CodeGen/MCM/paper/: dub.json
CodeGen/MCM/paper/source/: app.d  lex_machine.d  mangler.d  result.d
CodeGen/MCM/paper/source/constructs/: all_of_struct.d  arena.d  auto_array.d  const_struct.d  decl_offset_group.d  iconstruct.d  impl_offset_group.d  include.d  struct_alias.d  struct_invoke_on.d  struct_invoke_switchifeq.d
CodeGen/MCM/paper/source/keywords/: package.d
CodeGen/MCM/paper/source/tokenizer/: tokens.d  (+2 more)
CodeGen/MCM/preproc/: do_prepoc.lua  preproc_all_of_struct_impl.lua  preproc_constexpr_struct.lua  preproc_generate_offsetGroup.lua  preproc_group_struct_macro_invoke.lua  preproc_ifchain_macro_invoke.lua  preproc_impl_offsetGroup_page.lua  preproc_struct.lua
CodeGen/ModelBaker/: build_rel.bat  dub.json  dub.selections.json
CodeGen/ModelBaker/input/: dot.ply  skyrim_crosshair.ply
CodeGen/ModelBaker/source/: app.d
CodeGen/ModelBaker/source/mesh/: basic_writer.d  loader.d
CodeGen/gen_addrmap/: run.lua
CodeGen/shared/: lava.lua
DepGenerated/assimp/: revision.h
MCM/: SmoothCam.esp  SmoothCamMCM.pex  mcm.psc
MCM/preproc/: .luacheckrc  do_prepoc.lua  preproc_array_init_list.lua  preproc_constexpr_struct.lua  preproc_group_struct_macro_invoke.lua  preproc_ifchain_macro_invoke.lua
Package/00 Data/: SmoothCam.esl  SmoothCamMCM.pex
Package/00 Data/ExtraData/: SmoothCam_EyeBones_Default.txt  SmoothCam_FocusBones_Default.txt  SmoothCam_FollowBones_Default.txt  acknowledgements.md
Package/Fomod/: ModuleConfig.xml  info.xml
SmoothCam/: exports.def
SmoothCam/include/: SmoothCamAPI.h  arrow_fixes.h  basicdetour.h  camera.h  camera_state.h  code_analysis.h  compat.h  config.h  crosshair.h  debug_drawing.h  detours.h  firstperson.h  game_state.h  hooks.h  main.h  mmath.h  modapi.h  offset_ids.h  papyrus.h  pch.h  physics.h  profile.h  raycast.h  string_builder.h  thirdperson.h  timer.h  util.h
SmoothCam/include/addrlib/: offsets.h  relocation.h  skse_macros.h  versiondb.h
SmoothCam/include/camera_states/: base_first.h  base_third.h  thirdperson.h  thirdperson_combat.h  thirdperson_horse.h
SmoothCam/include/camera_states/thirdperson/: thirdperson.h  thirdperson_combat.h  thirdperson_dialogue.h  thirdperson_horse.h  thirdperson_vanity.h
SmoothCam/include/crosshair/: base.h  dot.h  skyrim.h
SmoothCam/include/debug/: ICommand.h  console.h  eh.h  registry.h
SmoothCam/include/debug/commands/: dump_addrlib_db.h  dump_game_ini.h  dump_game_perfs_ini.h  get_setting.h  help.h  set_setting.h
SmoothCam/include/havok/: hkp3AxisSweep.h  hkpCastCollector.h
SmoothCam/include/render/: cbuffer.h  common.h  d2d.h  d3d_context.h  dwrite.h  gradbox.h  line_drawer.h  line_graph.h  mesh_drawer.h  model.h  ninode_tree_display.h  render_target.h  shader.h  shader_cache.h  srv.h  state_overlay.h  texture2d.h  vertex_buffer.h
SmoothCam/include/render/models/: dot.h  skyrim_crosshair.h
SmoothCam/include/render/shaders/: draw_fullscreen_texture.h  shader_decl.h  shader_vertex_color.h  vertex_color.h  vertex_color_screen.h  vertex_color_world.h
SmoothCam/include/skyrimSE/: ArrowProjectile.h  AutoVanityState.h  DragonCameraState.h  FirstPersonState.h  FreeCameraState.h  HorseCameraState.h  IMovementInterface.h  PlayerCamera.h  PlayerCameraTransitionState.h  ThirdPersonState.h  bhkLinearCastCollector.h  bhkRigidBody.h  bhkSimpleShapePhantom.h  bhkWorld.h
SmoothCam/include/trackir/: trackir.h
SmoothCam/resource/: Resource.rc
SmoothCam/source/: arrow_fixes.cpp  basicdetour.cpp  camera.cpp  camera_state.cpp  compat.cpp  config.cpp  crosshair.cpp  debug_drawing.cpp  detours.cpp  firstperson.cpp  game_state.cpp  hooks.cpp  main.cpp  mmath.cpp  modapi.cpp  offset_ids.cpp  papyrus.cpp  pch.cpp  physics.cpp  raycast.cpp  thirdperson.cpp  timer.cpp  util.cpp
SmoothCam/source/addrlib/: offsets.cpp
SmoothCam/source/camera_states/: base_first.cpp  base_third.cpp  thirdperson.cpp  thirdperson_combat.cpp  thirdperson_horse.cpp
SmoothCam/source/camera_states/thirdperson/: thirdperson.cpp  thirdperson_combat.cpp  thirdperson_dialogue.cpp  thirdperson_horse.cpp  thirdperson_vanity.cpp
SmoothCam/source/crosshair/: base.cpp  dot.cpp  skyrim.cpp
SmoothCam/source/debug/: ICommand.cpp  console.cpp  eh.cpp  registry.cpp
SmoothCam/source/debug/commands/: dump_addrlib_db.cpp  dump_game_ini.cpp  dump_game_perfs_ini.cpp  get_setting.cpp  help.cpp  set_setting.cpp
SmoothCam/source/render/: cbuffer.cpp  common.cpp  d2d.cpp  d3d_context.cpp  dwrite.cpp  gradbox.cpp  line_drawer.cpp  line_graph.cpp  mesh_drawer.cpp  model.cpp  ninode_tree_display.cpp  render_target.cpp  shader.cpp  shader_cache.cpp  srv.cpp  state_overlay.cpp  texture2d.cpp  vertex_buffer.cpp
SmoothCam/source/trackir/: trackir.cpp
UI/: hudmenu.fla  hudmenu.swf
UI/hudmenu/: AnimatedLetter.as  Crosshair3D.as  HUDMenu.as  QuestNotification.as
buck2/: subdir_glob.bzl
buck2/mode/: debug  debug_pre629  release  release_pre629
buck2/toolchains/: BUCK
cmake/: headers.cmake  source.cmake
scripts/: bootstrap.ps1  build_detours.bat  check-install.py  fetch-buck.ps1  find-python3.ps1  install-7z.ps1  install-ldc.ps1  install-python3.ps1  install-vsbuild-tools.ps1  install-zstd.ps1
(+6 files in other folders)
